@@ -105,8 +105,20 @@ module TestDigest
   end
 
   def test_bubblebabble
+    expected = "xirek-hasol-fumik-lanax"
+    assert_equal Digest.bubblebabble('message'), expected
+  end
+
+  def test_bubblebabble_class
     expected = "xopoh-fedac-fenyh-nehon-mopel-nivor-lumiz-rypon-gyfot-cosyz-rimez-lolyv-pekyz-rosud-ricob-surac-toxox"
     assert_equal Digest::SHA256.bubblebabble('message'), expected
+  end
+
+  def test_bubblebabble_instance
+    expected = "xumor-boceg-dakuz-sulic-gukoz-rutas-mekek-zovud-gunap-vabov-genin-rygyg-sanun-hykac-ruvah-dovah-huxex"
+
+    hash = Digest::SHA256.new
+    assert_equal hash.bubblebabble, expected
   end
 
   class TestMD5 < Test::Unit::TestCase
